--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: rubber_app_bar
 description: "A Flutter package that provides a custom widget for having a rubber app bar that stretches and contracts while scrolling."
-version: 1.0.4
-homepage:
-repository:
+version: 1.0.5
+homepage: https://github.com/i-3mr/rubber_app_bar.git
+repository: https://github.com/i-3mr/rubber_app_bar.git
 
 environment:
   sdk: ">=3.2.1 <4.0.0"
